[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "sedge"
version = "2.2.3"
authors = ["Grahame Bowland <grahame@oreamnos.com.au>"]
description = "Template and share OpenSSH ssh_config(5) files."
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Intended Audience :: System Administrators",
  "Topic :: System :: Networking",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
]

[tool.poetry.scripts]
sedge = 'sedge.cli:cli'

[tool.poetry.dependencies]
python = ">=3.7,<4"
click = "^8.0.1"
requests = "^2.23.0"
urllib3 = "^1.26.6"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
tox = "^3.14.6"
flake8 = "^3.7.9"
pytest = "^6.2.5"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39
isolated_build = True

[testenv]
deps=pytest
commands=pytest
"""

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
  "tests"
]

[tool.coverage.run]
omit = [
  '*/site-packages/*',
  '*/tests/*'
]
