[project]
name = "sedge"
version = "2.3.1"
description = "Template and share OpenSSH ssh_config(5) files."
authors = [{ name = "Grahame Bowland", email = "grahame@oreamnos.com.au" }]
requires-python = ">=3.7,<4"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Networking",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
]
dependencies = [
    "click",
    "requests",
]

[project.scripts]
sedge = "sedge.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sedge"]

[dependency-groups]
dev = [
    "click",
    "requests",
    "tox",
    "pytest",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39
isolated_build = True

[testenv]
deps=pytest
commands=pytest
"""

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''
